--- a/GUI/vueclient/index.html
+++ b/GUI/vueclient/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vueclient</title>
+    <title>Software Engineering</title>
     <!--<link rel="stylesheet" type="text/css" href="../static/css/font-awesome.min.css"/>-->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="/static/css/fontawesome-all.css" rel="stylesheet">
